[metadata]
name = yamlcore
version = 0.0.2
author = Tina Müller
author_email = cpan2@tinita.de
description = YAML 1.2 Support for PyYAML
long_description = file: Readme.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/perlpunk/pyyaml-core
project_urls =
    Bug Tracker = https://github.com/perlpunk/pyyaml-core/issues
    repository = https://github.com/perlpunk/pyyaml-core
    changelog = https://github.com/perlpunk/pyyaml-core/blob/main/Changelog.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = yamlcore
python_requires = >=3.6

